Adding mud tiles with Alt key. Only greedy handles mud tiles

--- a/SearchAlgoSite/search-algo-site/src/lib/styles.css
+++ b/SearchAlgoSite/search-algo-site/src/lib/styles.css
@@ -25,14 +25,30 @@
     background-color: black;
 }
 
+.mud {
+    background-color: brown;
+}
+
 .frontier {
     background-color: red;
+}
+
+.mudFrontier {
+    background-color: darkred;
 }
 
 .explored {
     background-color: slateblue;
 }
 
+.mudExplored {
+    background-color: #384550;
+}
+
 .pathStep {
     background-color: lightgreen;
+}
+
+.mudPathStep {
+    background-color: #CABA9C;
 }
