Added Randomize Grid button. BUG: Requires Play/Stop before applying

--- a/SearchAlgoSite/search-algo-site/src/lib/styles.css
+++ b/SearchAlgoSite/search-algo-site/src/lib/styles.css
@@ -52,3 +52,9 @@
 .mudPathStep {
     background-color: #CABA9C;
 }
+
+.button-icon {
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+}
